[gd_scene load_steps=12 format=3 uid="uid://ls16gk2co2vu"]

[ext_resource type="Script" path="res://Scripts/Win_level.gd" id="1_dn2ha"]
[ext_resource type="Texture2D" uid="uid://d2ff5lg452kdb" path="res://Assets/Outros/Background gameover.png" id="2_psdej"]
[ext_resource type="FontFile" uid="uid://bjshi1hdnnmdc" path="res://Fontes/game_over.ttf" id="4_p8tsn"]
[ext_resource type="Texture2D" uid="uid://chh1ob34yg3jq" path="res://Assets/Outros/GUI.png" id="5_5852r"]
[ext_resource type="Texture2D" uid="uid://r5v025n8qsso" path="res://Assets/Outros/inimigo-radiacao.png" id="5_ncrxi"]
[ext_resource type="AudioStream" uid="uid://due6gq4iuu23m" path="res://Efeitos Sonoros/winLevel.wav" id="6_uvfsb"]

[sub_resource type="LabelSettings" id="LabelSettings_nbryo"]
font = ExtResource("4_p8tsn")
font_size = 250

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3wmyq"]
texture = ExtResource("5_5852r")
region_rect = Rect2(113, 81, 30, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3atrj"]
texture = ExtResource("5_5852r")
region_rect = Rect2(113, 98, 30, 13)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_vke8r"]
texture = ExtResource("5_5852r")
region_rect = Rect2(113, 113, 30, 14)

[sub_resource type="LabelSettings" id="LabelSettings_rnr51"]
font = ExtResource("4_p8tsn")
font_size = 50

[node name="Win_level" type="Node2D"]
script = ExtResource("1_dn2ha")

[node name="BackgroundGameover" type="Sprite2D" parent="."]
position = Vector2(640, 360)
texture = ExtResource("2_psdej")

[node name="GameOver" type="Label" parent="."]
texture_filter = 1
offset_left = 224.0
offset_top = 208.0
offset_right = 1053.0
offset_bottom = 350.0
text = "NÍVEL COMPLETO"
label_settings = SubResource("LabelSettings_nbryo")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProximaFase" type="Button" parent="."]
texture_filter = 1
offset_left = 512.0
offset_top = 432.0
offset_right = 768.0
offset_bottom = 496.0
theme_override_styles/normal = SubResource("StyleBoxTexture_3wmyq")
theme_override_styles/hover = SubResource("StyleBoxTexture_3atrj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vke8r")
text = "Próxima fase"
language = "pt_BR"

[node name="MenuPrincipal" type="Button" parent="."]
texture_filter = 1
offset_left = 512.0
offset_top = 512.0
offset_right = 768.0
offset_bottom = 576.0
theme_override_styles/normal = SubResource("StyleBoxTexture_3wmyq")
theme_override_styles/hover = SubResource("StyleBoxTexture_3atrj")
theme_override_styles/pressed = SubResource("StyleBoxTexture_vke8r")
text = "Menu principal"
language = "pt_BR"

[node name="TextoPontos" type="Label" parent="."]
offset_left = 592.0
offset_top = 352.0
offset_right = 684.0
offset_bottom = 381.0
text = "PONTOS"
label_settings = SubResource("LabelSettings_rnr51")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Pontos" type="Label" parent="."]
offset_left = 592.0
offset_top = 384.0
offset_right = 684.0
offset_bottom = 413.0
label_settings = SubResource("LabelSettings_rnr51")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Inimigo-radiacao" type="Sprite2D" parent="."]
position = Vector2(160, 80)
texture = ExtResource("5_ncrxi")

[node name="Inimigo-radiacao2" type="Sprite2D" parent="."]
position = Vector2(1008, 64)
texture = ExtResource("5_ncrxi")

[node name="Inimigo-radiacao3" type="Sprite2D" parent="."]
position = Vector2(384, 160)
texture = ExtResource("5_ncrxi")

[node name="Inimigo-radiacao4" type="Sprite2D" parent="."]
position = Vector2(704, 144)
texture = ExtResource("5_ncrxi")

[node name="Inimigo-radiacao5" type="Sprite2D" parent="."]
position = Vector2(1040, 192)
texture = ExtResource("5_ncrxi")

[node name="Inimigo-radiacao6" type="Sprite2D" parent="."]
position = Vector2(496, 64)
texture = ExtResource("5_ncrxi")

[node name="Inimigo-radiacao7" type="Sprite2D" parent="."]
position = Vector2(128, 592)
texture = ExtResource("5_ncrxi")

[node name="Inimigo-radiacao8" type="Sprite2D" parent="."]
position = Vector2(288, 624)
texture = ExtResource("5_ncrxi")

[node name="Inimigo-radiacao9" type="Sprite2D" parent="."]
position = Vector2(976, 464)
texture = ExtResource("5_ncrxi")

[node name="Inimigo-radiacao10" type="Sprite2D" parent="."]
position = Vector2(1040, 624)
texture = ExtResource("5_ncrxi")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_uvfsb")
volume_db = -10.0
autoplay = true

[connection signal="pressed" from="ProximaFase" to="." method="_on_proximo_nivel_pressed"]
[connection signal="pressed" from="MenuPrincipal" to="." method="_on_menu_principal_pressed"]
